Aug 07 2010      <zdenop@gmail.com>
    * Initial version 1.00 -> renamed http://tesseract-ocr.googlecode.com/files/tesseractTrainer.py