@@ -1,11 +1,24 @@
-= Ideas for contributors =
+= Ideas for Contributors =
 
   * *localisation*
+  * *undo* command
   * *configuration* (menu and user file) for:
    # last used directory
    # last open files
    # custom font
    # localisation
    # themes/layout (see screenshot in [http://code.google.com/p/pytesseracttrainer/issues/detail?id=1 issue 1] as proposal)
+  * support for *saving tesseract v3.00 box file* (pyTesseractTrainer can open tesseract 3.00 box file, but it saves v2.0x box file)
   * *multipage tiff support* (maybe it is not good idea open 200 pages tiff ;-) but maybe this can be done via '*project file*' and after adjusting all pages produce finale tiff and box file)
   * *diff against external text file* with visualization of differences in pyTesseractTrainer. For training process it common there is also available source text for training images. This feature would increase significantly productivity if somebody would start to train images and text files from [http://www.pgdp.net/c/ Distributed Proofreaders]
+  * integrated training process with tesseract:
+    # generating box file from  pyTesseractTrainer
+    # visual support for analyzing box error (e.g. FAILURE! box overlaps no blobs or blobs in multiple rows; FAILURE! box overlaps blob in labelled word)
+
+
+= Other Ideas =
+
+This ideas are not connected directly to training process.
+
+  * save text to DjVu (see article http://www.ub-filosofie.ro/~solcan/wt/gnu/d/odjv.html Insert OCRed text in DjVu])
+  * save to PDF (see [http://code.google.com/p/pytesseracttrainer/issues/detail?id=2 issue 2] - it needs reportlab addon that is not shipped with my Linux :-( )
