@@ -1,2 +1,8 @@
 Aug 07 2010      <zdenop@gmail.com>
+    * added image filter
+
+Aug 07 2010      <zdenop@gmail.com>
     * Initial version 1.00 -> renamed http://tesseract-ocr.googlecode.com/files/tesseractTrainer.py
+    * Prepration for new buxfix release (changed name, licence)
+    * Added support for utf-8 encoded box files
+    * Added support to open tesseract v3.0 box file
